--- a/DataBricks_Ferilion/SCD -Slowly Changing Dimensions/SCB Type 2.ipynb
+++ b/DataBricks_Ferilion/SCD -Slowly Changing Dimensions/SCB Type 2.ipynb
@@ -10,7 +10,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "c8df268c-cb1e-4427-9400-607e49790b61",
+     "nuid": "0b17eda8-b7df-4500-9f9f-46dd5b1b50e9",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -32,7 +32,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "bc4ae10a-c9e0-450d-bbc1-f5c6c09487a9",
+     "nuid": "5d9c4f0c-dc77-458a-8d0e-e319c4f44a3b",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -40,187 +40,20 @@
    },
    "outputs": [],
    "source": [
-    "df_bronze = spark.read.table(\"workspace.hemanth_bronze.emp\")\n",
-    "df_silver = spark.read.table(\"workspace.hemanth_silver.emp\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "06654478-648d-4895-80b0-af8f9d38e891",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df_bronze1  = df_bronze.withColumn(\"Valid_from\",current_timestamp()).withColumn(\"Valid_to\",lit(None).cast(\"timestamp\")).withColumn(\"Valid_Falg\",lit(\"Y\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "collapsed": true,
-     "inputWidgets": {},
-     "nuid": "7bb4d891-76d5-4329-8f2a-c9316c32720e",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df_bronze1.display()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "collapsed": true,
-     "inputWidgets": {},
-     "nuid": "c62165b7-8ac1-474e-b8fa-62d8808f1951",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df = df_bronze1.alias(\"bronze\").join(df_silver.alias(\"silver\"),df_bronze1.empno == df_silver.empno,\"left\").orderBy(\"bronze.empno\")\n",
-    "df.display()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "collapsed": true,
-     "inputWidgets": {},
-     "nuid": "5ec3d297-37bd-418d-aedb-cd5eb9f24195",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
+    "Source_Data = [\n",
+    "    (\"1\",\"Hemanth\",\"HYd\",\"506002\")\n",
+    "        ,(\"2\",\"Raj\",\"BLR\",\"560001\")\n",
+    "        ,(\"3\",\"Kumar\",\"MUM\",\"400001\")\n",
+    "        ,(\"4\",\"Ravi\",\"BLR\",\"560001\")\n",
+    "        ]\n",
     "\n",
-    "query = f\"\"\"\n",
-    "        select * from workspace.hemanth_bronze.emp where empno not in (select empno from workspace.hemanth_silver.emp)\n",
-    "\"\"\"\n",
-    "df_addnewrow = spark.sql(query)\n",
-    "display(df_addnewrow)\n",
-    "display(df_addnewrow.count())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "ae3a701f-fa4e-4529-bb91-146ab525e89a",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "if df_addnewrow.count() >= 1:\n",
-    "        df = df_addnewrow.withColumn(\"Valid_from\",current_timestamp()).withColumn(\"Valid_to\",lit(None).cast(\"timestamp\")).withColumn(\"Valid_Falg\",lit(\"Y\"))\n",
-    "        df.write.mode(\"append\").saveAsTable(\"workspace.hemanth_silver.emp\")\n",
-    "else:\n",
-    "     pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "collapsed": true,
-     "inputWidgets": {},
-     "nuid": "01723ed7-02d9-4b2e-b067-b0ea42eac007",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "select * from hemanth_silver.emp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "collapsed": true,
-     "inputWidgets": {},
-     "nuid": "78a389d6-c892-43f8-a47b-d3702cd210a2",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "df1 = df_bronze1.alias(\"bronze\").join(\n",
-    "    df_silver.alias(\"silver\"),\n",
-    "    col(\"bronze.empno\") == col(\"silver.empno\"),\n",
-    "    \"inner\"\n",
-    ").filter(\n",
-    "    ((col(\"bronze.Valid_Falg\") == \"Y\") & (col(\"silver.Valid_Falg\") != \"N\")) & (\n",
-    "        (col(\"bronze.mgr\") != col(\"silver.mgr\")) |\n",
-    "        (col(\"bronze.sal\") != col(\"silver.sal\")) |\n",
-    "        (col(\"bronze.comm\") != col(\"silver.comm\")) |\n",
-    "        (col(\"bronze.dept_id\") != col(\"silver.dept_id\"))\n",
+    "DSchema  = StructType(\n",
+    "    [StructField(\"Id\",StringType(),True),\n",
+    "     StructField(\"Name\",StringType(),True),\n",
+    "     StructField(\"City\",StringType(),True),\n",
+    "     StructField(\"Pin\",StringType(),True)]\n",
     "    )\n",
-    ")\n",
-    "\n",
-    "df1.display()"
+    "                       "
    ]
   },
   {
@@ -233,31 +66,18 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "325f9a20-60d9-40ba-ad0a-114f7a9154ee",
-     "showTitle": true,
+     "nuid": "2ff11aaf-6760-405b-b496-1f5c2feea394",
+     "showTitle": false,
      "tableResultSettingsMap": {},
-     "title": "update & insert"
+     "title": ""
     }
    },
    "outputs": [],
    "source": [
+    "df_Source = spark.createDataFrame(Source_Data,DSchema)\n",
+    "df_Source.\n",
     "\n",
-    "if df1.count() >= 1:\n",
-    "        df_CustomerId = df1.select(col(\"bronze.empno\").alias(\"empno\"))\n",
-    "        empnos = [row.empno for row in df_CustomerId.select(\"empno\").distinct().collect()]\n",
-    "        empnos_str = \",\".join(str(e) for e in empnos)\n",
-    "\n",
-    "        query = f\"\"\"\n",
-    "         UPDATE workspace.hemanth_silver.emp\n",
-    "         SET Valid_Falg = 'N',\n",
-    "         Valid_to = current_timestamp()\n",
-    "         WHERE empno in ({empnos_str})\n",
-    "        \"\"\"\n",
-    "\n",
-    "        spark.sql(query)\n",
-    "df_insert = df_bronze1.filter(df_bronze1.empno.isin(empnos))\n",
-    "df_insert = df_bronze1.filter(df_bronze1.empno.isin(empnos))\n",
-    "df_insert.write.mode(\"append\").saveAsTable(\"workspace.hemanth_silver.emp\")"
+    "df_Source.display()"
    ]
   },
   {
@@ -270,32 +90,16 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "1f03e4fa-8da9-4247-a659-b4aec5d18392",
-     "showTitle": true,
+     "nuid": "b713fed9-b26d-4eb9-8383-f4e69636c604",
+     "showTitle": false,
      "tableResultSettingsMap": {},
-     "title": "update for deleted record"
+     "title": ""
     }
    },
    "outputs": [],
    "source": [
-    "query = f\"\"\"\n",
-    "        select empno from workspace.hemanth_silver.emp where empno not in (select empno from workspace.hemanth_bronze.emp)\n",
-    "\"\"\"\n",
-    "df = spark.sql(query)\n",
-    "\n",
-    "if df.count() >= 1:\n",
-    "\n",
-    "    empnos = [row.empno for row in df.select(\"empno\").distinct().collect()]\n",
-    "    empnos_str = \",\".join(str(e) for e in empnos)\n",
-    "    query1 = f\"\"\"\n",
-    "        update workspace.hemanth_silver.emp\n",
-    "        SET Valid_Falg = 'N',\n",
-    "        Valid_to = current_timestamp()\n",
-    "        where empno not in ({empnos})\n",
-    "\"\"\"\n",
-    "    spark.sql(query1)\n",
-    "        \n",
-    "        "
+    "df_target = df_Source.withColumn(\"Valid_date\",current_timestamp()).withColumn(\"Valid_to\",lit(None).cast(\"timestamp\")).withColumn(\"Vaild_Flag\",lit(\"Y\"))\n",
+    "df_target.display()"
    ]
   },
   {
@@ -307,32 +111,25 @@
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
-     "collapsed": true,
      "inputWidgets": {},
-     "nuid": "ff27a887-66b2-4180-bf0d-34fae1c8abfd",
-     "showTitle": true,
+     "nuid": "819cff03-c806-4109-94ed-cfc674a4415e",
+     "showTitle": false,
      "tableResultSettingsMap": {},
-     "title": "update"
+     "title": ""
     }
    },
    "outputs": [],
    "source": [
-    "# df_CustomerId = df1.select(col(\"bronze.empno\").alias(\"empno\"))\n",
-    "# empnos = [row.empno for row in df_CustomerId.select(\"empno\").distinct().collect()]\n",
-    "# empnos_str = \",\".join(str(e) for e in empnos)\n",
+    "updated_Data = [\n",
+    "    (\"1\",\"Hemanth\",\"wgl\",\"506001\")\n",
+    "        ,(\"2\",\"Raj\",\"BLR\",\"560001\")\n",
+    "        ,(\"3\",\"Kumar\",\"MUM\",\"400001\")\n",
+    "        ,(\"4\",\"Ravi\",\"BLR\",\"560001\")\n",
+    "        ,(\"5\",\"Raju\",\"Chn\",\"560008\")\n",
+    "        ]\n",
     "\n",
-    "# query = f\"\"\"\n",
-    "#     UPDATE workspace.hemanth_silver.emp\n",
-    "#     SET Valid_Falg = 'N',\n",
-    "#     Valid_to = current_timestamp()\n",
-    "#     WHERE empno in ({empnos_str})\n",
-    "# \"\"\"\n",
-    "\n",
-    "# spark.sql(query)\n",
-    "# df_insert = df_bronze1.filter(df_bronze1.empno.isin(empnos))\n",
-    "# df_insert = df_bronze1.filter(df_bronze1.empno.isin(empnos))\n",
-    "# df_insert.write.mode(\"append\").saveAsTable(\"workspace.hemanth_silver.emp\")\n",
-    "\n"
+    "df_update = spark.createDataFrame(updated_Data,DSchema)\n",
+    "df_update.display()"
    ]
   },
   {
@@ -346,7 +143,34 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "709b1b08-ed08-4010-90d7-a7e325505311",
+     "nuid": "36b33ef3-6d80-4923-b5f9-46aabc3a7232",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "df_target.write.format(\"delta\").saveAsTable(\"default.CustomerData\")\n",
+    "\n",
+    "# Drop Table if exists default.CustomerData\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "collapsed": true,
+     "inputWidgets": {},
+     "nuid": "78c43487-c7ec-454d-98ab-14a20bcfe3b3",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -355,7 +179,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "select * from hemanth_silver.emp order by empno"
+    "select * from default.customerdata"
    ]
   },
   {
@@ -367,20 +191,233 @@
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
-     "collapsed": true,
      "inputWidgets": {},
-     "nuid": "2856ab9a-350a-4eca-96e1-1f29cebaec99",
-     "showTitle": true,
+     "nuid": "9ca568fe-7e94-426e-b958-3ce910708ecb",
+     "showTitle": false,
      "tableResultSettingsMap": {},
-     "title": "insert"
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from delta.tables import DeltaTable\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1a8fabed-0905-4263-a867-b3055ef38aa0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "target_table = DeltaTable.forName(spark, \"default.CustomerData\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c55a4c67-88c7-4a07-aba6-fa67592ef18b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# df_join = df_update.alias(\"Newdata\").join(df_target.alias(\"OldData\"),df_update.Id == df_target.Id,\"inner\")\\\n",
+    "# .filter(df_target.Vaild_Flag == \"Y\")\\\n",
+    "# .filter(df_update.Pin != df_target.Pin)\\\n",
+    "# .filter(df_target.City != df_update.City)\n",
+    "\n",
+    "\n",
+    "# df_join.display()\n",
+    "\n",
+    "\n",
+    "\n",
+    "df_join  = df_update.join(target_table.toDF() ,df_update.Id == target_table.toDF().Id,\"inner\")\\\n",
+    ".filter(target_table.toDF().Vaild_Flag == \"Y\")\\\n",
+    ".filter(df_update.Pin != target_table.toDF().Pin)\\\n",
+    ".filter(target_table.toDF().City != df_update.City)\n",
+    "df_join.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b9f9c51e-da21-4a64-8be1-a145112fe402",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_customerId = df_join.select(df_update.Id)\n",
+    "df_customerId.display()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ff375cda-d304-441c-868a-ead8ee80e4bb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "target_table.alias(\"t\").merge( \n",
+    "                              source=df_customerId.alias(\"CusID\"),\n",
+    "                            condition=\"t.Id = CusID.Id and t.Vaild_Flag = 'Y'\"\n",
+    "    ).whenMatchedUpdate(set = \n",
+    "                        {\n",
+    "                            \"Vaild_Flag\" : lit(\"N\"),\n",
+    "                            \"Valid_to\" : current_timestamp()\n",
+    "                         }\n",
+    "                        ).execute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5b353042-8fba-41f7-be87-f048d5e08b86",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e5a04bd9-eb6e-4020-ac09-aad55544bf73",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "select *  from customerdata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "56c5b63e-cdeb-4f37-9c3e-7d692edb6062",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "source.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8be45106-1820-42d2-ba3a-7fbe06349fcb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
     }
    },
    "outputs": [],
    "source": [
     "\n",
-    "# df_insert = df_bronze1.filter(df_bronze1.empno.isin(empnos))\n",
-    "# df_insert.write.mode(\"append\").saveAsTable(\"workspace.hemanth_silver.emp\")"
+    "new_records = df_target.join(\n",
+    "    df_customerId, \n",
+    "    df_target.Id == df_customerId.Id, \n",
+    "    \"left_semi\"\n",
+    ").withColumn(\"Valid_date\", current_timestamp()\n",
+    ").withColumn(\"Valid_to\", lit(None).cast(\"timestamp\")\n",
+    ").withColumn(\"Valid_Flag\", lit(\"Y\"))\n",
+    "\n",
+    "new_records.display()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7dd5ebd3-6fbb-48e3-bd1d-3f64c0a931cc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -395,14 +432,14 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 6844560191127032,
+     "commandId": 1661925621060692,
      "dataframes": [
       "_sqldf"
      ]
     },
     "pythonIndentUnit": 4
    },
-   "notebookName": "Transormation scd 2",
+   "notebookName": "SCB Type 2",
    "widgets": {}
   },
   "language_info": {
